[package]
name = "blaze"
version = "0.1.0"
repository = "https://github.com/initbar/blaze"
authors = ["Herbert Shin <h@init.bar>"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
bio = { version="0.16.0" }
cpython = { version="0.1", features=["extension-module-2-7", "python27-sys"], default-features=false } # Python 2.7
# cpython = { version="0.1", features=["extension-module"] } # Python 3+
